Fixes user dropdown alignment on mobile.

--- a/marble-core/src/main/resources/web/sass/styles.sass
+++ b/marble-core/src/main/resources/web/sass/styles.sass
@@ -137,9 +137,6 @@ body
     margin-left: -59px
   .dropdown-alerts
     margin-left: -123px
-  .dropdown-user
-    right: 0
-    left: auto
 
 .sidebar
   .sidebar-nav.navbar-collapse
